<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.github.wujun728</groupId>
	<artifactId>jun_java_plugins</artifactId>
	<version>1.0</version>
	<packaging>pom</packaging>
	
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
	</properties>

	<modules>
		<module>jun_algorithm</module>
		<module>jun_aliyun_sms</module>
		<module>jun_apache_commons</module>
		<module>jun_compiler</module>
		<module>jun_config_resources</module>
		<module>jun_crawler</module>
		<module>jun_datasource</module>
		<module>jun_dbutil</module>
		<module>jun_designpattern</module>
		<module>jun_drools</module>
		<module>jun_easycaptcha</module>
		<module>jun_ehcache</module>
		<module>jun_email</module>
		<module>jun_excel</module>
		<module>jun_fileupload</module>
		<module>jun_freemarker</module>
		<module>jun_guava</module>
		<module>jun_guice</module>
		<module>jun_gzip</module>
		<module>jun_hibernate</module>
		<module>jun_httpclient</module>
		<module>jun_j2cache</module>
		<module>jun_jar2maven</module>
		<module>jun_java_compiler</module>
		<module>jun_javase</module>
		<module>jun_jbpm</module>
		<module>jun_jdbc</module>
		<module>jun_jdk</module>
		<module>jun_jgit</module>
		<module>jun_json</module>
		<module>jun_jsoup</module>
		<module>jun_memcached</module>
		<module>jun_mongodb</module>
		<module>jun_multicluster</module>
		<module>jun_mybatis</module>
		<module>jun_mybatis_mate</module>
		<module>jun_mybatisplus</module>
		<module>jun_mycat</module>
		<module>jun_mysql</module>
		<module>jun_okhttp</module>
		<module>jun_online_java_complier</module>
		<module>jun_oracle</module>
		<module>jun_pay</module>
		<module>jun_pdf</module>
		<module>jun_poi</module>
		<module>jun_poi_tl_word_export</module>
		<module>jun_qrcode</module>
		<module>jun_quartz</module>
		<module>jun_redis</module>
		<module>jun_serialization</module>
		<module>jun_shiro</module>
		<module>jun_solr</module>
		<module>jun_threadpool</module>
		<module>jun_uid</module>
		<module>jun_upload_jsp_servlet</module>
		<module>jun_webmagic</module>
		<module>jun_webservice</module>
		<module>jun_webservlet</module>
		<module>jun_webservlet_guice_dbutil</module>
		<module>jun_websocket</module>
		<module>jun_xml</module>
		<module>jun_db_document</module>

	</modules>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>3.8.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>3.1.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>5.1.40</version>
		</dependency>
	</dependencies>


	<profiles>
		<profile>
			<id>jdk-1.8</id>
			<activation>
				<activeByDefault>true</activeByDefault>
				<jdk>1.8</jdk>
			</activation>
			<properties>
				<maven.compiler.source>1.8</maven.compiler.source>
				<maven.compiler.target>1.8</maven.compiler.target>
				<maven.compiler.compilerVersion>1.8</maven.compiler.compilerVersion>
			</properties>
		</profile>
	</profiles>


	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>